tepanate + ideas rework+rewrite

--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -5,6 +5,23 @@
  acerb_new_march: "New March"
  desc_acerb_new_march: "Our ruler was recently granted these lands, for which he is forever grateful."
 
+ nusabate_reform: "Nusabate"
+ nusabate_reform_desc: "Nusabate is an autocratic state ruled by one, extensive family."
+ NUSABATE: "Nusabate"
+ GRAND_NUSABATE: "Grand Nusabate"
+ NUSABAT: "Nusabat"
+ GRAND_NUSABAT: "Grand Nusabat"
+ NUSABATIN: "Nusabatin"
+ GRAND_NUSABATIN: "Grand Nusabatin"
+
+ TEPANATE: "Tepanate"
+ GRAND_TEPANATE: "Tepanate"
+ TEPAN: "Tepan"
+ GRAND_TEPAN: "Grand Tepan"
+ KALMALAKIN: "Kalmalakin"
+ KALMALAK: "Kalmalak"
+ ADEF: "Adef"
+
  estate_nobles_yermic_frontier: "Yermic Frontier"
  estate_nobles_yermic_frontier_desc: "After stabilizing his realm, king Enrique II moved on to 'stabilize' realms of neighboring yermic states. To make the conquest and control over his court easier, he granted the land to his most skillful knights and counts."
  enrique_II_alive_tt: "Enrique II is no longer a ruler"
@@ -14,9 +31,9 @@
  acerb.1.b: "I conquered this land, so it belongs to me!"
  narbone_broken_promise: "Broken Promise"
  acerb.2.t: "Death of Enrique II"
- acerb.2.desc: "In the Year of our Lord, [GetYear], $MONARCHTITLE$ Enrique II de Verracia, also known as "the Conqueror", passed away and moved on to the eternal life. His body will be placed in royal Cathedral in the city of $CAPITAL_CITY$."
+ acerb.2.desc: "In the Year of our Lord, [GetYear], $MONARCHTITLE$ Enrique II de Verracia, also known as \"the Conqueror\", passed away and moved on to the eternal life. His body will be placed in royal Cathedral in the city of $CAPITAL_CITY$."
  acerb.2.a: "Your legacy will not be forgotten"
- acerb.2.a_tooltip: "You may now revoke "§YYermic Frontier§!" nobility privilege."
+ acerb.2.a_tooltip: "You may now revoke §YYermic Frontier§! nobility privilege."
  acerb.2.b: "A new age of prosperity is coming."
  acerb.3.t: "Land viable for wine production"
  acerb.3.desc: "With recent conquest of $PROVINCE$, it became apparent that the soil and climate there is really suitable for growing grapes. How should we proceed?"
@@ -65,37 +82,37 @@
  group_aqerbic_ideas_start: "Aqerbic Minor Traditions"
  group_aqerbic_ideas_bonus: "Aqerbic Minor Ambition"
  AQERB_seafarer_culture: "Seafarer Culture"
- AQERB_seafarer_culture_desc: "People of Aqerb are descendats of muzbahi colonists and explorers and this blood still flows in our veins. Sea is undeniably important part of our lifestyle - either through trade or fishing."
- AQERB_legacy_of_yermians: "Legacy of Yermians"
- AQERB_legacy_of_yermians_desc: "The need to explore the outer sea and seek trade partners is almost as important as bread and water to aqerbic person. Yermians, and more specifically muzbahi, are known to establish many colonies in the mocitian sea - even the aqerb was once only a colony."
- AQERB_in_the_name_of_patron: "In the Name of Patron"
- AQERB_in_the_name_of_patron_desc: "Patrons are almost holy, but pious, figures in aqerbic history. Most of them have been pious priests, but sometimes important figures, such as politicians and rulers, also may claim this title. For their service to the Ilum, they are granted patronhood over important cities and places which might have been important to them during their lifetime."
+ AQERB_seafarer_culture_desc: "People of Aqerb are descendats of muzbahi colonists and explorers and this blood still flows in our veins. Early settlements were mostly focused on fishing and establishing coastal outpost, before turning their eyes towards colonizing fertile river farmlands. Sea is undeniably important part of our lifestyle, even more so in the times were naval presence allows for a regional hegemony."
+ AQERB_legacy_of_the_exodus: "Legacy of the Exodus"
+ AQERB_legacy_of_the_exodus_desc: "The need to explore the outer sea and seek trade partners is almost as important as bread and water to a Yermic person. Our ancestors established many settlements in the Alkalen sea in order to trade resources considered rare in our ancient homeland in Muzbah. After prophet Nathaniel and Heshbon showed us the truth, many were forced to abandon their fatherland survive on their own in the wild west. Despite tha hardships, we have prevailed and our new colonies will also be able to prosper."
+ AQERB_parliamentary_traditions: "Yekhen"
+ AQERB_parliamentary_traditions_desc: "In the beginnings of the Aqerbic colonization, the cities didn't really have a single ruler. Most cities embraced the Dafdan government ruled by the assembly, which discussed issues in the city and elected the Tepan, which was responsible for applying the ideas and demands of the parliament. Despite the tepan gaining more and more power with the coming ages, the yekhen is still present in many Aqerbic states."
+ AQERB_in_the_name_of_ilum: "In the Name of Ilum"
+ AQERB_in_the_name_of_ilum_desc: "The most important political and cultural figures are granted the title of a patron. Piety, insight and service to the Ilum have have them patronhood over important cities and places which might have been important to them during their lifetime. Historically, most of them have been scholars, missionaries, political leaders and even tepans. While there are many local patrons, the most important of them are considered prophets."
  AQERB_sacred_geometry: "Sacred Geometry"
- AQERB_sacred_geometry_desc: "Many great minds believe that there is something inherently sacred about geometric shapes and patterns. This belief quickly spread during the time of 'Kalmaqani Renaissance' which caused many buildings and structures to include symmetrical and repeating patterns. Not only is this aesthetically pleasing, but also leads to deeper knowledge about the universe."
+ AQERB_sacred_geometry_desc: "Many great minds believe that there is something inherently sacred about geometric shapes and patterns. This belief quickly spread during the time of 'Kalmaqani Renaissance' which caused many buildings and structures to include symmetrical and repeating patterns. Not only is this aesthetically pleasing, but also leads to a deeper knowledge about the universe."
  AQERB_irrigation_efforts: "Irrigation Efforts"
  AQERB_irrigation_efforts_desc: "Most of settlements in aqerbic peninsula are based either on a major river, such as Zawarmahz, or on a smaller river but near the coast, such as Zibarat, with growing expansion of aqerbic states and subsequentially their population came the need of delivering fresh water to drier places. Now, thanks to years of building and maintaining advanced irrigation systems, cities like Barquna can prosper withouth direct connection to a water source."
  AQERB_palace_strongholds: "Palace Strongholds"
  AQERB_palace_strongholds_desc: "Our beautiful peninsula wasn't always a good place to live. Many wars, internal conflicts, invaders from the sea and now from the east have caused widespread devastation in rural areas. With this palaces became obsolete, and elites, wanting to still show off their wealth, started building castles in easily defendable positions, which are characteristic for their elaborate structures and rich decorations."
- AQERB_family_bonds: "Family Bonds"
- AQERB_family_bonds_desc: "What is more important than family? According to aqerbic, only the true God. Lesser family members who have a slim chance of inheriting anything meaningful often pursue a scholarly or military careers. This helps to keep the power within the elite, as they are both the rulers and advisors."
 
  nahshaharosian_ideas: "Nahshaharosian ideas"
  nahshaharosian_ideas_start: "Nahshaharosian Traditions"
  nahshaharosian_ideas_bonus: "Nahshaharosian Ambition"
- nahralnoriya_western_expeditions: "Western Expeditions"
- nahralnoriya_western_expeditions_desc: "The desire to cross the Niheyan Ocean is not new. Many expeditions attempted to cross the ocean in the past, most notably fleet of Zaphon in the VII century. With the advancements in the naval technology and more pragmatic reasons to explore what lies beyond the western horizon we may finally see what new world lies across the sea."
- nahralnoriya_advanced_irrigation: "Advanced Irrigation"
- nahralnoriya_advanced_irrigation_desc: "Our homeland lies in the valley of great river Nasihatr. It supplied first aqerbic settlers in these lands with water and fertile lands, well suited for agriculture. After some time it became apparent that the water needed to be supplied to more dry places further from the river itself. Many of great irrigation canals were build during the rule of Zawarmahzi Nusabate and serve their purpose to this day."
- nahralnoriya_open_court: "Open Court"
- nahralnoriya_open_court_desc: "Most of Nusabates like to brag about their elitism. Keeping everything within the family is seen as the correct way to rule, but they are to blind to see that to rule over your population is to know what they want. This technique of integrating with common folk can bring fresh ideas to the court."
- nahralnoriya_university_of_radom: "Radom University"
- nahralnoriya_university_of_radom_desc: "Radom is the site of the oldest university in this part of the world. It was founded in the VII century during the rule of Zaphon over Aqerb, but the city itself was an important center of innovation in the region. Greates mathematical minds of our times have studied there, bringing innovation not only to ourselves, but to the entire world."
- nahralnoriya_bridge_to_the_new_world: "Bridge to the New World"
- nahralnoriya_bridge_to_the_new_world_desc: "Our early advancements in Chantlia are paying off. We were first to set up important trade routes and deals with natives, practically monopolizing trade with the New World. Gold, tobacco, cocoa and cotton flow through Nahshaharos daily, bringing prosperity to our people."
- nahralnoriya_protector_of_aqerb: "Protector of Aqerb"
- nahralnoriya_protector_of_aqerb_desc: "Saelians think they can conquer people of yaltazim withouth any repercussions. They are partially true - for most of the time the peninsula was disunited and easy to conquer. If we don't want to be destroyed by the invaders, we must unite our people under common banner and show that we are the true rulers of Aqerb!"
- nahralnoriya_spread_true_word: "Spread the True Word"
- nahralnoriya_spread_true_word_desc: "When we first reached Chantlia, communication with the natives was hard. After first translators started to appear, it became obvious that many things that are obvious to us are unthinkable to a tribal mind. To make colonization of these lands easier, many institutions were created, one of which was 'Institute of the True Word', meant to teach natives the basics of Yaltazim. Many techniques developed by them are used by missionaries in other parts of the word to this day."
+ nahshaharos_advanced_irrigation: "Alvasian Irrigations"
+ nahshaharos_advanced_irrigation_desc: "Great river Nasihatr begins its course in the Altaharani highlands, flows through many important cities and ends its course in the seat of assembly in Hazsihar. Since time immemorial the western coast was well suited for agriculture, supplying first settlers of these lands with water and fertile lands. After some time many wished to expand on this natural occurence, trying to bring the water to places further from the river itself, where climate wasn't as suitable.\n\nNew canals were systematically build, with newer ones always being more advanced and effective than the previous iterations. Biggest increase in their number came during the golden age of Zawarmahzian dominance, when Alvas the Engineer unified the entire canal infrastructure of the region."
+ nahshaharos_westward_expeditions: "Westward Expeditions"
+ nahshaharos_westward_expeditions_desc: "During the zenith of Kalmaqan, many looked for a way to expand their influence beyond conquests of eastern lands of Saelians and Ilumists. Rumors of an eastward route to Pemenia which avoided territories controlled by our enemies led to Kalmaqan Eshmudan 'Geba' to fund a great expedition of twenty four ships, each built from the strongest Alvarian oaks, able to withstand even strongest winds and storms. Despite this, the expedition never returned, many wondering whether they were killed by natives or they found a new life across the ocean.\n\nCenturies after the first expedition, an increasing number of merchants, captains and scholars wish to get funding for a tracherous new expedition across the sea, claiming that the seafearing technology has greatly improved since. Belsheran Mahtanban, guided by similar desire to find a new world to conquer, organized a second great expedition in the year 1481, beginning a new age of exploration."
+ nahshaharos_sons_of_meqim: "Sons of Meqim"
+ nahshaharos_sons_of_meqim_desc: "Second century leader Meqim is considered to be the twelth prophet and a patron of the city of Zawarmahz, where he was born. During his time as a tepan he greatly increased the influence of his city over neighboring lands and even unifying them in his later days, creating the first great empire of Aqerb, with the borders reaching as far as ancient Rouvia, establishing many new cities, spreading the faith to the newly conquered people. He was the one that brought strength and prestige to the title of Tepan, elevating it to a status not so different of an eastern king, but despite this, after years of fullfulling his ambitions, he retired to give power to a new generation of people, being a leading example of a self-limiting autocrat.\n\nMany people of Nahshaharos can claim their descend from Meqim and even those who don't still call themselves the people of Meqim, for he was the one that truly showed the light to Yermics of Aqerb."
+ nahshaharos_yekhen_of_all_people: "Yekhen of All People"
+ nahshaharos_yekhen_of_all_people_desc: "The tradition of bringing together the most influential and wisest people of the land originates from a need to effectively organize a colony where the interest of all peoples are respected to prevent unnecesary conflict. Yekhens were originally the dominant force in our cities until the time of Meqim, however assembly still was a counterweight to the power of tepans, sometimes even managing to force tepans to relinquish their power. Rise of estate monarchy in the east returned some of the strength to the Yekhen, however only in sixteenth century, under the reign of the weak tepan Kiman it was drastically expanded, to not only include landowners, merchants and some of the clergy, but also commonfolk, industrialists, pastorialists, colonists and military cadre.="
+ nahshaharos_university_of_radom: "Radom University"
+ nahshaharos_university_of_radom_desc: "Radom is the site of the oldest university in the entire Maqitan old, being even older many Camarian sites. It was founded in the seventh century during the Zaphonic rule, but the city itself was an important center of innovation in the region even before the university was officialy funded. Before its foundation the studies were organized in the palaces of local sponsors of art and science. Greatest mathematical and philosophical minds of our times have studied and taught there, bringing innovation not only to ourselves, but to the entire world. While the university lost its prestige during the thirteenth and fourteenth centuries, with a restored ambitions to explore and calculate the world, many rich merchants began to fund the university from their own pocket, giving the institution a second life."
+ nahshaharos_strength_in_unity: "Strength in Unity"
+ nahshaharos_strength_in_unity_desc: "Saelian barbarians of Narbone think they can conquer our land withouth any repercussions, seeing us not as people, but as achievements and show of zealotry. Sadly, disunity of the states in periods betwee the great empires always brought a new invader wanting to expand their influence. Knowing the fate of the peninsula in a case of ambivalence, Ahzai Mahtanban marched through Ifritica in 1441. He didn't stop there - later he threatened the tepan of Dushmira to bow down to Nahshaharos. The necessary evil of Ahzai allowed the Yaltazim populace of Aqerb to prevail and defeat the Narbonese forces in the battle of Rizqal, often seen as the first step to their collapse."
+ nahshaharos_a_treaty_on_nature_of_all_things: "A Treatise on Nature of All Things"
+ nahshaharos_a_treaty_on_nature_of_all_things_desc: "In order to convert many unenlightened natives of the new world, multiple books and treatises have been written to explain the yaltazim worldview to the masses. The greates work of this trend was 'A treatise on nature of all things, including the god, earth, people, creatures of all kind, plants, winds, kingdoms of the world, history, rivers and dry and wet lands, described in twelve short and comprehensive books', written in 1591 by the founder of the School of Dagappa Hacmoni Laven. He is known for his dedication to conversion of the native population - so much so that he died during an attempt to convert the people of Matyan, however only part of his body recovered was the head.\n\nDespite the cruel death, his efforts weren't in vain, as many natives embraced the new ways as their own thanks to the schools founded and treatises written by Laven."
 
  ignidunta_ideas: "Ingidunter ideas"
  ignidunta_ideas_start: "Ingidunter Traditions"
@@ -152,4 +169,7 @@
  carba_grand_acerban_army: "Grand Acerban Army"
  carba_grand_acerban_army_desc: "The grand coastline of Carba requires many defenses for the rich trading ports, to protect the invaluable trade routes maintained by the Crown. In order to man all the forts and fill the ranks of the infantry, the nobility proposed a greater conscription quota, in return for greater privileges once a soldier has finished serving.\n\nAt first the royal armoury had difficulties in supplying such a large amount of new recruits, but with the addition of conscripted blacksmiths, steel was forged at double the rate. New legions now line up in most of the castle courtyards throughout the nation, swearing to protect the crown and all of its dependencies."
  carba_true_heirs_of_saelius: "True Heirs of Saelius"
- carba_true_heirs_of_saelius_desc: "Seliana, the birthplace of the holy Saelius has long reminded us of the legacy of his empire that many desecrate, believing their own ambitions to be greater. With the complete conquest of Aqerb, the last bastion that once stubbornly pushed against the Saelian faith, have we fulfilled his wishes, bringing the faith all across Mysentria.\n\nThis accomplishment has only proved that Saelius has chosen us as his true heirs, ones that must unite the empire once again, defeating the heretics and reaching lands unknown.\n\n"This land shall bear the name of its first king, and under its banner, the world shall kneel."\n-Caelestius"
+ carba_true_heirs_of_saelius_desc: "Seliana, the birthplace of the holy Saelius has long reminded us of the legacy of his empire that many desecrate, believing their own ambitions to be greater. With the complete conquest of Aqerb, the last bastion that once stubbornly pushed against the Saelian faith, have we fulfilled his wishes, bringing the faith all across Mysentria.\n\nThis accomplishment has only proved that Saelius has chosen us as his true heirs, ones that must unite the empire once again, defeating the heretics and reaching lands unknown.\n\n\"This land shall bear the name of its first king, and under its banner, the world shall kneel.\"\n-Caelestius"
+
+ tepanate_reform: "Tepanate"
+ tepanate_reform_desc: "Tepanat originally was the leader of the colony, responsible for its survival and resource management. With the passing of centuries and military expansions, it transformed into a king-like role, however still with parliamentary roots."
