--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -139,9 +139,9 @@
  desc_marstonian_pantheon_unified_pantheon: "Some of the lesser deities, like the god of beard trimming, have been removed from the official pantheon."
 
  marstonian_pantheon_sacrifice: "Perform a Sacrifice"
- marstonian_pantheon_sacrifice_tt: "Perform a Sacrifice in order to solidify your rule and devotion to your currently preferred deity."
+ marstonian_pantheon_sacrifice_tt: "Perform a Sacrifice in order to solidify your rule and show devotion to your currently preferred deity."
  mp_recent_sacrifice_mod: "Recently Performed a Sacrifice"
- desc_mp_recent_sacrifice_mod: "The Sacrificing ritual has been recently performed."
+ desc_mp_recent_sacrifice_mod: "The Sacrificing ritual has been recently performed and another one can't be performed for 10 years."
  marstonia.3_insight_tt: "We will be able to conduct a sacrifice of either wealth, livestock or grain, which will buff your current deity."
  marstonia.3.t: "Ritual of Sacrifice"
  marstonia.3.desc: "Sacrifice of goods is an important part of our culture, showing people's devotion to the gods. While sacrifices cleary bring divine effects, a good ruler knows that it can also be used to reign in the populace and show one's faithfullness. What kind of sacrifice should be performed today?"
