--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -3,3 +3,4 @@
  zbojaner_group_parliament_name: "Wiec"
  NAB_parliament_name: "Cunnadhul"
  CAT_parliament_name: "Cunnadhul"
+ west_yermic_group_parliament_name: "Yekhen"
