--- a/localisation/emperor_missions_l_english.yml
+++ b/localisation/emperor_missions_l_english.yml
@@ -35,3 +35,4 @@
  defender_of_faith_refused_cta: "Dishonorable Defender of the Faith"
  COUNTRY_NAME_WILL_CHANGE_IN: "Country name will change to $NAME|Y$."
  COUNTRY_NAME_WILL_BE_RESTORED: "Country name will be restored to the original value"
+ add_5_crown_land_share: "§Y[Root.GetName]§! gains §G5§! crown land ownership."
