forstilic sea loc

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -952,3 +952,13 @@
  chugwana_area: "Chugwana"
 
  tharavan_area: "Tharavan"
+
+ kanayuk_area: "Kanayuk"
+ apunland_area: "Apunland"
+ beraland_area: "Beraland"
+ east_anderland_area: "East Anderland"
+ west_anderland_area: "West Anderland"
+ clegduns_area: "Clegduns"
+ sivisurukpags_area: "Sivisurukpags"
+ east_fengelland_area: "East Fengelland"
+ west_fengelland_area: "West Fengelland"
