--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -60,7 +60,7 @@
  qarabil_tradenode: "Qarabil Maior"
  radoriasa_tradenode: "Radoriasa"
  upper_moorfluss_tradenode: "Upper Moorfluss"
- forstlic_sea_tradenode: "Forstlic Sea"
+ forstlic_sea_tradenode: "Forstilic Sea"
  costa_dourada_tradenode: "Costa Dourada"
  secesa_tradenode: "Secesa"
  coicemhar_tradenode: "Coicemhar"
