--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -100,10 +100,10 @@
  PROV99: "Aswanqalb"
  PROV100: "Qudsala"
  PROV101: "Nasala"
- PROV102: "102"
- PROV103: "103"
+ PROV102: "Yala"
+ PROV103: "Komara"
  PROV104: "104"
- PROV105: "105"
+ PROV105: "Melahan"
  PROV106: "Datayssa"
  PROV107: "Arnar"
  PROV108: "Ihol"
@@ -1877,9 +1877,9 @@
  PROV1876: "Yesateu"
  PROV1877: "Alikaske"
  PROV1878: "Jarithan Coast"
- PROV1879: "1879"
+ PROV1879: "Northwestern Fimaqan Sea"
  PROV1880: "1880"
- PROV1881: "1881"
+ PROV1881: "Northern Famiqan Sea"
  PROV1882: "1882"
  PROV1883: "Southeastern Ilonardian Sea"
  PROV1884: "1884"
@@ -1930,7 +1930,7 @@
  PROV1929: "Moideshweshe"
  PROV1930: "Zadrotun"
  PROV1931: "1931"
- PROV1932: "1932"
+ PROV1932: "Central Fimaqan Current"
  PROV1933: "1933"
  PROV1934: "Ashmubadoo"
  PROV1935: "1935"
@@ -1946,7 +1946,7 @@
  PROV1945: "Washewakche"
  PROV1946: "Chepashick"
  PROV1947: "Odosuatejew"
- PROV1948: "1948"
+ PROV1948: "Southeastern Famiqan Sea"
  PROV1949: "Costervan Sea"
  PROV1950: "Hadyachutook"
  PROV1951: "Analati"
@@ -2313,7 +2313,7 @@
  PROV2312: "2312"
  PROV2313: "Magra"
  PROV2314: "Heguara"
- PROV2315: "2315"
+ PROV2315: "Eastern Forstilic Sea"
  PROV2316: "Bicaya"
  PROV2317: "Marache"
  PROV2318: "Inaja"
@@ -2321,23 +2321,23 @@
  PROV2320: "Aramaji"
  PROV2321: "Guamca"
  PROV2322: "Carahaga"
- PROV2323: "2323"
- PROV2324: "2324"
+ PROV2323: "Northern Forstilic Sea"
+ PROV2324: "Tasillan Gulf"
  PROV2325: "Manabua"
  PROV2326: "Aymaca"
  PROV2327: "Piruga"
- PROV2328: "2328"
+ PROV2328: "Micelacusian Coast"
  PROV2329: "Boriga"
  PROV2330: "Jayuba"
  PROV2331: "Guanchaca"
  PROV2332: "Tinama"
- PROV2333: "2333"
+ PROV2333: "Fengellander Coast"
  PROV2334: "Buyacoguey"
  PROV2335: "Manatisa"
  PROV2336: "Birnuga"
  PROV2337: "Boniaba"
  PROV2338: "Puaqach"
- PROV2339: "2339"
+ PROV2339: "Hunter's Bay"
  PROV2340: "Guacara"
  PROV2341: "Jibara"
  PROV2342: "Ditacab"
@@ -2354,14 +2354,14 @@
  PROV2353: "Kanayuk Bay"
  PROV2354: "2354"
  PROV2355: "2355"
- PROV2356: "2356"
+ PROV2356: "Apunian Coast"
  PROV2357: "2357"
  PROV2358: "2358"
  PROV2359: "2359"
  PROV2360: "2360"
  PROV2361: "2361"
  PROV2362: "Otomoca"
- PROV2363: "2363"
+ PROV2363: "Taiguk Peninsula"
  PROV2364: "South Blawenn Coast"
  PROV2365: "Nitaypa"
  PROV2366: "Neraque"
