Flavour and Lore stuff for Kabonen and Bnai Byniev
Now they are historical Rivals.

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -28,3 +28,5 @@
  LOADING_TIP_26: "People of Šarikullu control the most important trade routes in North Sahila, allowing them to indirectly influence many countries."
  LOADING_TIP_27: "Gug! Gug! Gug!"
  LOADING_TIP_28: "\"Three thousand armed men, their blades of steel\nMarched to the shore, where waves would kneel.\""
+ LOADING_TIP_29: "Kabonen is a republic founded by Mawaqi merchants that lost their way when they tried to reach Hengtua by sea."
+ LOADING_TIP_30: "Bnai Byniev is known as the Moon Kingdom, due to the fact that its founding matriarch, Shin Sawbu Nardu, was born during Full Moon."
