indrigerland map + tummland setup

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -146,7 +146,7 @@
  amparimaa_area: "Amparimaa"
  punainen_metsa_area: "Punainen Metsa"
  kultaharju_area: "Kultaharju"
- upper_korpikoski_area: "Upper Korpikoski"
+ ruoksjoha_valley_area: "Ruoksjoha Valley"
  noitamaa_area: "Noitamaa"
  vahvatappo_area: "Vahvatappo"
  korvenmaa_area: "Korvenmaa"
@@ -228,7 +228,7 @@
  keskimaasto_area: "Keskimaasto"
  jarviylamaa_area: "Jarviylamaa"
  kivikkoranta_area: "Kivikkoranta"
- Itaanpaa_area: "Itäänpää"
+ itaanpaa_area: "Itäänpää"
 
  oarjecohkka_area: "Oarjecohka"
  vuonnamanu_area: "Vuonnamanu"
