--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -37,7 +37,7 @@
  PROV36: "Biejvvevuovdi"
  PROV37: "Dálvadasvuopmi"
  PROV38: "Huipet"
- PROV39: "Pohjoisvuoristo"
+ PROV39: "Huipet"
  PROV40: "Kallioranta"
  PROV41: "Bloemzee"
  PROV42: "Kultalampi"
@@ -4535,8 +4535,8 @@
  PROV4534: "Badhati"
  PROV4535: "Sevpane"
  PROV4536: "Talnadi"
- PROV4537: "4537"
- PROV4538: "4538"
+ PROV4537: "Huipet"
+ PROV4538: "Ruksjoa"
  PROV4539: "4539"
  PROV4540: "4540"
  PROV4541: "4541"
