--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -554,8 +554,8 @@
 
  MRS: "Marstonia"
  MRS_ADJ: "Marstonian"
- IND: "Indrigerland"
- IND_ADJ: "Indriger"
+ IND: "Várrinsaáhpi"
+ IND_ADJ: "Várrinsaáhpian"
 
  TON: "Tonatitlan"
  TON_ADJ: "Tonatitlan"
