--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -102,3 +102,21 @@
  maalopp_roovlaev_campaign_desc: "Our sailors' tactic during sea battles is to separate the enemy ships and defeat them individually. This strategy really shined during the wars against the Mutovan pirates, when our ships managed to defeat a far larger fleet of the enemy."
  maalopp_sininesaal: "Sininesaal"
  maalopp_sininesaal_desc: "Meaning 'The Blue Hall' in lounaväki language, this great room is a place for the lord's council to meet and discuss issues in the country. It's famous for the rich baroque decorations with many sea motifs."
+
+ indrigerland_ideas: "Várrinsaáhpian Ideas"
+ indrigerland_ideas_bonus: "Várrinsaáhpian Ambition"
+ indrigerland_ideas_start: "Várrinsaáhpian Traditions"
+ indrigerland_arctic_fishing: "Arctic Fishing"
+ indrigerland_arctic_fishing_desc: "Most of the year, Indriger sea is frozen solid, making some parts of it practically unsailable. While many fishermen from Dorchean isles and Ehrenia avoid the frozen waters expecting little to no catch at a high cost, our ice-breaking techniques have allowed us to effectively extract tasty delights of the deep and maintain a somewhat stable supply of food all year long."
+ indrigerland_frontiers_of_yhalum: "Frontiers of Yhälum"
+ indrigerland_frontiers_of_yhalum_desc: "Tummic monopoly on various furs have made many of our lords interested in finding our own permanent supply. Settlements in Jaatansangot and along the river Ruoksjoha. A byproduct of exploring the eastern seas has also allowed us to open new trade routes with many tribes of Kakigia and Khutigaria, further increasing the colonial fervor."
+ indrigerland_spirits_of_the_sea: "Spirits of the Sea"
+ indrigerland_spirits_of_the_sea_desc: "Just like our brothers south, our people sing chants of beasts, which live in these lands, protecting their subjects. Many of our stories focus on monster lurking in the deep and cold sea. Legends of powerful Tavoalli and Čuodamoud are no scare for our seamen, for they know how to mark their ships against any spirits."
+ indrigerland_joukka_herding: "Joukka Herding"
+ indrigerland_joukka_herding_desc: "The most effective way to herd and breed the livestock is to do it in the biggest groups possible. While many of our people don't have a large personal herd, it became a common practice for families to group together and have a shared herd. This is not only manpower efficient, allowing more of our people to focus on trading and fishing, but also strengthens the local bonds of our people."
+ indrigerland_settlers_of_minisa: "Settlers of Minisa"
+ indrigerland_settlers_of_minisa_desc: "Beyond the ocean lies a mythical land of beasts and plants not seen anywhere else before. Despite the harsh conditions, new ailments and unfriendly locals, many of our people are willing to give up their old life, in a hope of exploiting this new and strange world."
+ indrigerland_mines_of_huipet: "Mines of Huipet"
+ indrigerland_mines_of_huipet_desc: "While travelling along the rivers, many of our people started to notice glittery dust which was dyeing the river. Soon after, large amounts of metals hav been found in various places, such as iron in Báhcaveaivi and, more importantly, copper in Dálvadasvuopmi, which has proved to be of great importance, considering its growing importance in cannonmaking."
+ indrigerland_a_boreal_empire: "A Boreal Empire"
+ indrigerland_a_boreal_empire_desc: "With colonies in the new world and many outposts along the Syvämetsän coast, we have found ourselves controlling distant, disconnected lands. To protect them and ensure their loyalty to the state, a large, a new fleet is needed. The old fishing vessels will need to be abandoned and our new, professional and modern navy will reign on the seas."
